[package]
name = "defmtusb"
description = "defmt logging over USB interface"

version = "0.1.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/micro-rust/defmtusb"

license = "MIT OR MPL-2.0"

publish = true

categories = ["development-tools::debugging", "embedded", "no-std"]
keywords = ["defmt", "embedded", "logging", "usb"]



[dependencies]
static_cell = "2.1.0"

[dependencies.critical-section]
version = "1.1"

[dependencies.defmt]
version = "0.3.10"

[dependencies.embassy-futures]
path = "../embassy/embassy-futures"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
path = "../embassy/embassy-time"

[dependencies.embassy-usb]
path = "../embassy/embassy-usb"


[features]

default = ["buffersize-256"]

buffersize-64   = []
buffersize-128  = []
buffersize-256  = []
buffersize-512  = []
buffersize-1024 = []
